updating YT links

--- a/Kaggle_Competition/Gravitational_Waves/EDA_CQT_Keras_Baseline.ipynb
+++ b/Kaggle_Competition/Gravitational_Waves/EDA_CQT_Keras_Baseline.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## [My Youtube Video Explanation Link](https://youtu.be/UeI4-kyuAwI)\n",
+    "\n",
     "![](https://www.sciencenews.org/wp-content/uploads/2016/02/gwaves_feat-new.jpg)\n",
     "\n",
     "In this competition you are provided with a training set of time series data containing simulated gravitational wave measurements from a network of 3 gravitational wave interferometers (LIGO Hanford, LIGO Livingston, and Virgo). Each time series contains either detector noise or detector noise plus a simulated gravitational wave signal. The task is to identify when a signal is present in the data (target=1).\n",
