--- a/TensorFlow/TF_Fundaments_YT/Fundamentals_TF_v1_YT.ipynb
+++ b/TensorFlow/TF_Fundaments_YT/Fundamentals_TF_v1_YT.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## [Youtube Link](https://youtu.be/UNfxShN6vp4)\n",
+    "\n",
     "# Tensors\n",
     "\n",
     "A **tensor** is a container for *numeric* data. Tensors can contain data within an arbitrary number of dimensions. That is, it can be a zero-dimensional (0D), one-dimensional (1D), two-dimensional (2D), three-dimensional (3D), and so on. Within the context of tensors, a dimension is often called an **axis**.\n",
