updating DCGAN NB

--- a/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
+++ b/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
@@ -30,7 +30,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "source": [
         "# ************ START OF ALL ONE-TIME-ONLY-CODES  *************\n",
         "\n",
@@ -73,18 +73,7 @@
         "# drive.mount('/content/gdrive')\n",
         "# os.chdir('/content/drive/MyDrive/celeba-dataset')"
       ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "\" IMPORTANT - While connecting Colab with G-Drive where dataset lives in Google-Drive - I necessarily have to do os.chdir before running the unzip command.\\n\\nElse just running below unzip command will unzip all the files into Colab's Virtual Machine's current session storage. Which will get deleted after the session ends (12h or 24 Hours).\\n\\nBut - I sometime do need to get the unzipped done in Colab's Virtual Machine's session-storage because..\\n\\n1. Unzipping to Colab's own session-storage took like 100 seconds while unzipping to G-Drive took 25/30 minutes for CelebA 1GB .zip file.\\n\\n2. MORE IMPORTANTLY - I could NOT run run os.listdir() at all while reading to 200k CELEB-A .jpg files from Colab. Got Input/Output error. Many have got this as stated in SO Questions.\\n\\nOfficial Explanations - https://research.google.com/colaboratory/faq.html#drive-timeout\\n\\nBut reading the same 200k files from Colab's Session Storage was super-fast.\\n\\n\""
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
-      ],
+      "outputs": [],
       "metadata": {
         "id": "ywPyS98p_DQY",
         "colab": {
@@ -92,6 +81,190 @@
         },
         "outputId": "67b3962c-fec4-4688-d372-fd3f9cb124f8"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# Facial Attribute prediction\n",
+        "\n",
+        "Facial Attribute prediction is a Computer Vision (CV) task about deducing the set of attributes belonging to a face. Example attributes are the color of hair, hairstyle, age, gender, etc.\n",
+        "\n",
+        "Facial attribute analysis has received considerable attention when deep learning techniques made\n",
+        "remarkable breakthroughs in this field over the past few\n",
+        "years.\n",
+        "\n",
+        "Deep learning based facial attribute analysis consists of two basic sub-issues:\n",
+        "\n",
+        "facial attribute estimation (FAE), which recognizes whether facial attributes are present in given images, and\n",
+        "\n",
+        "facial attribute manipulation (FAM), which synthesizes or removes desired facial attributes.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Getting to know CELEB-A Dataset\n",
+        "\n",
+        "202,599 number of face images of various celebrities\n",
+        "10,177 unique identities, but names of identities are not given\n",
+        "40 binary attribute annotations per image\n",
+        "5 landmark locations\n",
+        "\n",
+        "#### Data Files\n",
+        "\n",
+        "- <b>img_align_celeba.zip</b>: All the face images, cropped and aligned\n",
+        "- <b>list_eval_partition.csv</b>: Recommended partitioning of images into training, validation, testing sets. Images 1-162770 are training, 162771-182637 are validation, 182638-202599 are testing\n",
+        "- <b>list_bbox_celeba.csv</b>: Bounding box information for each image. \"x_1\" and \"y_1\" represent the upper left point coordinate of bounding box. \"width\" and \"height\" represent the width and height of bounding box\n",
+        "- <b>list_landmarks_align_celeba.csv</b>: Image landmarks and their respective coordinates. There are 5 landmarks: left eye, right eye, nose, left mouth, right mouth\n",
+        "- <b>list_attr_celeba.csv</b>: Attribute labels for each image. There are 40 attributes. \"1\" represents positive while \"-1\" represents negative\n",
+        "\n",
+        "## The Facial Attributes of CELEB-A Dataset\n",
+        "\n",
+        "![Imgur](https://imgur.com/reRs5Jk.png)\n",
+        "\n",
+        "The Dataset is considerably large to manage with even Google Colab's Pro version. I got out-of-memory quite a few times. Could not work at all with the full set of 200k images.\n",
+        "\n",
+        "### A quick tip in this regard if you are using local-machine to handle this dataset-challenge.\n",
+        "\n",
+        "If you have a Solid-State Drive (SSD) with enough space plugged in your\n",
+        "machine, I highly recommend you move all of your training samples to\n",
+        "the SSD, especially when you have a powerful graphics card. Because\n",
+        "when you are training neural networks on a very large dataset, which\n",
+        "cannot fit in the GPU memory, the reading speed from physical drives\n",
+        "could be the bottleneck of your training performance. Sometimes, the\n",
+        "speed-up of SSD (reading samples at 50 MB/s) over the traditional hard\n",
+        "drive (5 MB/s) can save you a big chunk of training time.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "# Fundamental way GAN Works\n",
+        "\n",
+        "\n",
+        "GAN contains two networks which has two competing objectives:\n",
+        "\n",
+        "Generator: the generator generates new data instances that are \"similar\" to the training data, in our case celebA images. Generator takes random latent vector and output a \"fake\" image of the same size as our reshaped celebA image.\n",
+        "\n",
+        "Discriminator: the discriminator evaluate the authenticity of provided images; it classifies the images from the generator and the original image. Discriminator takes true of fake images and output the probability estimate ranging between 0 and 1.\n",
+        "\n",
+        "![Imgur](https://imgur.com/pLJdmxs.png)\n",
+        "\n",
+        "\n",
+        "### The basic objective function of a vanilla GAN model is the following:\n",
+        "\n",
+        "![Imgur](https://imgur.com/LMjhfKk.png)\n",
+        "\n",
+        "Here, D refers to the discriminator network, while G obviously refers to the generator.\n",
+        "\n",
+        "As the formula shows, the generator optimizes for maximally confusing the discriminator, by trying to make it output high probabilities for fake data samples.\n",
+        "\n",
+        "On the contrary, the discriminator tries to become better at distinguishing samples coming from G from samples coming from the real distribution.\n",
+        "\n",
+        "The GAN training process consists of a two-player minimax game in which D is adapted to minimize the discrimination error between real and generated samples, and G is adapted to maximize the probability of D making a mistake. When G does a good enough job to fool D, the output probability should be close to 1.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "# Regular Neural Network vs CNN\n",
+        "\n",
+        "\n",
+        "Unlike a regular feed-forward neural network whose neurons\n",
+        "are arranged in flat, fully connected layers, layers in a\n",
+        "ConvNet are arranged in three dimensions (width × height ×\n",
+        "depth).\n",
+        "\n",
+        "Convolutions are performed by sliding one or more filters (the smaller Matrix which is the Kernel of the Current Layer) over the input layer. Each filter has a relatively small receptive field (width × height) but always extends through the\n",
+        "entire depth of the input volume.\n",
+        "\n",
+        "At every step as it slides across the input, each filter outputs a single activation value: the dot product between the input values and the filter entries.\n",
+        "\n",
+        "Convolutional Neural Networks (CNNs) are neural networks with architectural constraints to reduce computational complexity and ensure translational invariance (the network interprets input patterns the same regardless of translation— in terms of image recognition: a banana is a banana regardless of where it is in the image). Convolutional Neural Networks have three important architectural features.4\n",
+        "\n",
+        "\n",
+        "https://ai.stackexchange.com/a/5566/49733\n",
+        "\n",
+        "Convolutional Neural Networks have three important architectural features.\n",
+        "\n",
+        "Local Connectivity: Neurons in one layer are only connected to neurons in the next layer that are spatially close to them. This design trims the vast majority of connections between consecutive layers, but keeps the ones that carry the most useful information. The assumption made here is that the input data has spatial significance, or in the example of computer vision, the relationship between two distant pixels is probably less significant than two close neighbors.\n",
+        "\n",
+        "Shared Weights: This is the concept that makes CNNs \"convolutional.\" By forcing the neurons of one layer to share weights, the forward pass (feeding data through the network) becomes the equivalent of convolving a filter over the image to produce a new image. The training of CNNs then becomes the task of learning filters (deciding what features you should look for in the data.)\n",
+        "\n",
+        "Pooling and ReLU: CNNs have two non-linearities: pooling layers and ReLU functions. Pooling layers consider a block of input data and simply pass on the maximum value. Doing this reduces the size of the output and requires no added parameters to learn, so pooling layers are often used to regulate the size of the network and keep the system below a computational limit. The ReLU function takes one input, x, and returns the maximum of {0, x}. ReLU(x) = argmax(x, 0). This introduces a similar effect to tanh(x) or sigmoid(x) as non-linearities to increase the model's expressive power.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "# Deep Convolutional GANs (DCGANs)\n",
+        "\n",
+        "Deep Convolutional GANs (DCGANs) introduced convolutions to the generator and discriminator networks.\n",
+        "\n",
+        "However, this was not simply a matter of adding convolutional layers to the model, since training became even more unstable.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Generator Architecture\n",
+        "\n",
+        "![Imgur](https://imgur.com/bHX4suR.png)\n",
+        "\n",
+        "The generator network of a DCGAN contains 4 hidden layers (we treat the input layer as\n",
+        "the 1st hidden layer for simplicity) and 1 output layer. Transposed convolution layers are\n",
+        "used in hidden layers, which are followed by batch normalization layers and ReLU\n",
+        "activation functions. The output layer is also a transposed convolution layer and Tanh is\n",
+        "used as the activation function.\n",
+        "\n",
+        "The 2nd, 3rd, and 4th hidden layers and the output layer have a stride value of 2. The 1st layer\n",
+        "has a padding value of 0 and the other layers have a padding value of 1. As the\n",
+        "image (feature map) sizes increase by two in deeper layers, the numbers of channels are\n",
+        "decreasing by half. This is a common convention in the architecture design of neural\n",
+        "networks. All kernel sizes of transposed convolution layers are set to 4 x 4. The output\n",
+        "channel can be either 1 or 3, depending on whether you want to generate grayscale images\n",
+        "or color images.\n",
+        "\n",
+        "## The architecture of a discriminator\n",
+        "\n",
+        "![Imgur](https://imgur.com/HQWoKrF.png)\n",
+        "\n",
+        "The discriminator network of a DCGAN consists of 4 hidden layers (again, we treat the\n",
+        "input layer as the 1st hidden layer) and 1 output layer. Convolution layers are used in all\n",
+        "layers, which are followed by batch normalization layers except that the first layer does not\n",
+        "have batch normalization. LeakyReLU activation functions are used in the hidden layers\n",
+        "and Sigmoid is used for the output layer. The architecture of the discriminator is shown in\n",
+        "the following:\n",
+        "\n",
+        "The input channel can be either 1 or 3, depending on whether you are dealing with\n",
+        "grayscale images or color images. All hidden layers have a stride value of 2 and a padding\n",
+        "value of 1 so that their output image sizes will be half the input images. As image sizes\n",
+        "increase in deeper layers, the numbers of channels are increasing by twice. All kernels in\n",
+        "convolution layers are of a size of 4 x 4. The output layer has a stride value of 1 and a\n",
+        "padding value of 0. It maps 4 x 4 feature maps to single values so that the Sigmoid function\n",
+        "can transform the value into prediction confidence.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "### Several tricks had to be applied to make DCGANs stable and useful:\n",
+        "\n",
+        "Batch normalization was applied to both the generator and the discriminator network\n",
+        "Dropout is used as a regularization technique\n",
+        "The generator needed a way to upsample the random input vector to an output image. Transposing convolutional layers is employed here\n",
+        "LeakyRelu and TanH activations are used throughout both networks\n",
+        "\n",
+        "------------------------------------------------------------------------------\n",
+        "\n",
+        "# How Reverse ConvNets works in DCGAN - SLIDE-5\n",
+        "\n",
+        "ConvNets have traditionally been used for image classification\n",
+        "tasks, in which the network takes in an image with the\n",
+        "dimensions height × width × number of color channels as\n",
+        "input and—through a series of convolutional layers—outputs a\n",
+        "single vector of class scores, with the dimensions 1 × n, where\n",
+        "n is the number of class labels.\n",
+        "\n",
+        "In DCGAN, under the Generator part, to generate an image by using the ConvNet architecture, we reverse the process: instead of taking an image and processing it into a vector, we take a\n",
+        "vector and up-size it to an image.\n",
+        "\n",
+        "So, overall, the core to the DCGAN architecture uses a standard CNN architecture on the discriminative model.\n",
+        "\n",
+        "But for the generator, convolutions are replaced with up-convolutions, so the representation at each layer of the generator is actually successively larger, as it maps from a low-dimensional latent vector onto a high-dimensional image."
+      ],
+      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -138,7 +311,7 @@
         "\n",
         "all_image_path = []\n",
         "\n",
-        "# full_image_train_path = \"/kaggle/input/celeba-dataset/img_align_celeba/img_align_celeba/\" \n",
+        "# full_image_train_path = '../input/celeba-dataset/img_align_celeba/img_align_celeba'\n",
         "# When running in Kaggle\n",
         "\n",
         "full_image_train_path = \"../input/img_align_celeba/img_align_celeba/\"\n",
@@ -404,7 +577,7 @@
         "The generator consists of convolutional-transpose layers, batch normalization layers, and ReLU activations. The output will be a 3x64x64 RGB image.\n",
         "\n",
         "\n",
-        "### Use Batch Normalization\n",
+        "## Use of Batch Normalization\n",
         "\n",
         "Batch normalization standardizes the activations from a prior layer to have a zero mean and unit variance. This has the effect of stabilizing the training process.\n",
         "\n",
@@ -703,11 +876,36 @@
         "\n",
         "Training GANs is an art form itself, as incorrect hyperparameter settings lead to mode collapse. So play with different hyperparameters to obtain better results.\n",
         "\n",
-        "- The training loop begins with generator receiving a random seed as input. That seed is used to produce an image. \n",
-        "- The discriminator is then used to classify real images (drawn from the training set) and fakes images (produced by the generator). \n",
-        "- The loss is calculated for each of these models\n",
+        "### Final Training Architecture of a DCGAN\n",
         "\n",
-        "In the process defined below I am training the generator and discriminator simultaneously. Note like we know, training GANs can be tricky. It's important that the generator and discriminator do not overpower each other (e.g., that they train at a similar rate).\n",
+        "1. Initially, both of the networks are naive and have random weights.\n",
+        "\n",
+        "2. The standard process to train a DCGAN network is to first train the discriminator on the batch of samples.\n",
+        "\n",
+        "3. To do this, we need fake samples as well as real samples. We already have the real samples, so we now\n",
+        "need to generate the fake samples.\n",
+        "\n",
+        "4. To generate fake samples, create a latent vector of a shape of (100,) over a uniform distribution. Feed\n",
+        "this latent vector to the untrained generator network. The generator network will generate fake samples\n",
+        "that we use to train our discriminator network. So the training loop begins with generator receiving a random seed as input. That seed is used to produce an image. \n",
+        "\n",
+        "5. Concatenate the real images and the fake images to create a new set of sample images. We also need to\n",
+        "create an array of labels: label 1 for real images and label 0 for fake images.\n",
+        "\n",
+        "6. The discriminator is then used to classify real images (drawn from the training set) and fakes images (produced by the generator). \n",
+        "\n",
+        "7. The loss is calculated for each of these models\n",
+        "In the process defined below I am training the generator and discriminator simultaneously.\n",
+        "\n",
+        "## DCGAN ins super sensitive\n",
+        "\n",
+        "Here, even when we only train a GAN to manipulate 1D data, we have to use multiple\n",
+        "techniques to ensure a stable training. A lot of things could go wrong in the training of\n",
+        "GANs. For example, either a generator or a discriminator could overfit if one or the other\n",
+        "does not converge. Sometimes, the generator only generates a handful of sample varieties.\n",
+        "This is called mode collapse. \n",
+        "\n",
+        "It's important that the generator and discriminator do not overpower each other (e.g., that they train at a similar rate).\n",
         "\n",
         "At the beginning of the training, the generated images will look like random noise. As training progresses, the generated images will look increasingly real just like original celeb-a images. After about 300 epochs, they resemble almost the original.\n",
         "\n",
