updating YT link in Notebook

--- a/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
+++ b/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
@@ -86,6 +86,14 @@
       "cell_type": "markdown",
       "source": [
         "\n",
+        "### Special Note - Due to Out-of-memory limits in Kaggle, I could NOT run this Notebook inside Kaggle with any larger dataset than 1000 images. Hence the resultant fake images generated at the end will almost be like noise. But this Notebook is mostly written as a Tutorial to show the flow of DCGAN.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Link to my Youtube Video Explaining this whole Notebook\n",
+        "\n",
+        "[![Imgur](https://imgur.com/8ogHDeZ.png){:.some-css-class width=\"50\"}](https://youtu.be/csQj1e6Oj38)\n",
+        "\n",
         "# Facial Attribute prediction\n",
         "\n",
         "Facial Attribute prediction is a Computer Vision (CV) task about deducing the set of attributes belonging to a face. Example attributes are the color of hair, hairstyle, age, gender, etc.\n",
