updating YT Link in DCGAN

--- a/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
+++ b/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
@@ -90,7 +90,7 @@
         "\n",
         "---\n",
         "\n",
-        "## Link to my Youtube Video Explaining this whole Notebook\n",
+        "## [Link to my Youtube Video Explaining this whole Notebook](https://youtu.be/csQj1e6Oj38)\n",
         "\n",
         "[![Imgur](https://imgur.com/8ogHDeZ.png){:.some-css-class width=\"50\"}](https://youtu.be/csQj1e6Oj38)\n",
         "\n",
