updatint YT Links

--- a/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
+++ b/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
@@ -92,7 +92,7 @@
         "\n",
         "## [Link to my Youtube Video Explaining this whole Notebook](https://youtu.be/csQj1e6Oj38)\n",
         "\n",
-        "[![Imgur](https://imgur.com/8ogHDeZ.png){:.some-css-class width=\"50\"}](https://youtu.be/csQj1e6Oj38)\n",
+        "[![Imgur](https://imgur.com/8ogHDeZ.png)](https://youtu.be/csQj1e6Oj38)\n",
         "\n",
         "# Facial Attribute prediction\n",
         "\n",
