correcting some small spelling mistakes

--- a/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
+++ b/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
@@ -190,11 +190,11 @@
         "\n",
         "Convolutional Neural Networks have three important architectural features.\n",
         "\n",
-        "Local Connectivity: Neurons in one layer are only connected to neurons in the next layer that are spatially close to them. This design trims the vast majority of connections between consecutive layers, but keeps the ones that carry the most useful information. The assumption made here is that the input data has spatial significance, or in the example of computer vision, the relationship between two distant pixels is probably less significant than two close neighbors.\n",
+        "**Local Connectivity**: Neurons in one layer are only connected to neurons in the next layer that are spatially close to them. This design trims the vast majority of connections between consecutive layers, but keeps the ones that carry the most useful information. The assumption made here is that the input data has spatial significance, or in the example of computer vision, the relationship between two distant pixels is probably less significant than two close neighbors.\n",
         "\n",
-        "Shared Weights: This is the concept that makes CNNs \"convolutional.\" By forcing the neurons of one layer to share weights, the forward pass (feeding data through the network) becomes the equivalent of convolving a filter over the image to produce a new image. The training of CNNs then becomes the task of learning filters (deciding what features you should look for in the data.)\n",
+        "**Shared Weights**: This is the concept that makes CNNs \"convolutional.\" By forcing the neurons of one layer to share weights, the forward pass (feeding data through the network) becomes the equivalent of convolving a filter over the image to produce a new image. The training of CNNs then becomes the task of learning filters (deciding what features you should look for in the data.)\n",
         "\n",
-        "Pooling and ReLU: CNNs have two non-linearities: pooling layers and ReLU functions. Pooling layers consider a block of input data and simply pass on the maximum value. Doing this reduces the size of the output and requires no added parameters to learn, so pooling layers are often used to regulate the size of the network and keep the system below a computational limit. The ReLU function takes one input, x, and returns the maximum of {0, x}. ReLU(x) = argmax(x, 0). This introduces a similar effect to tanh(x) or sigmoid(x) as non-linearities to increase the model's expressive power.\n",
+        "**Pooling and ReLU**: CNNs have two non-linearities: pooling layers and ReLU functions. Pooling layers consider a block of input data and simply pass on the maximum value. Doing this reduces the size of the output and requires no added parameters to learn, so pooling layers are often used to regulate the size of the network and keep the system below a computational limit. The ReLU function takes one input, x, and returns the maximum of {0, x}. ReLU(x) = argmax(x, 0). This introduces a similar effect to tanh(x) or sigmoid(x) as non-linearities to increase the model's expressive power.\n",
         "\n",
         "---\n",
         "\n",
@@ -256,7 +256,7 @@
         "\n",
         "------------------------------------------------------------------------------\n",
         "\n",
-        "# How Reverse ConvNets works in DCGAN - SLIDE-5\n",
+        "# How Reverse ConvNets works in DCGAN\n",
         "\n",
         "ConvNets have traditionally been used for image classification\n",
         "tasks, in which the network takes in an image with the\n",
@@ -905,7 +905,7 @@
         "7. The loss is calculated for each of these models\n",
         "In the process defined below I am training the generator and discriminator simultaneously.\n",
         "\n",
-        "## DCGAN ins super sensitive\n",
+        "## DCGAN is super sensitive\n",
         "\n",
         "Here, even when we only train a GAN to manipulate 1D data, we have to use multiple\n",
         "techniques to ensure a stable training. A lot of things could go wrong in the training of\n",
