correcting some small spelling mistakes

--- a/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
+++ b/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
@@ -183,12 +183,9 @@
         "\n",
         "At every step as it slides across the input, each filter outputs a single activation value: the dot product between the input values and the filter entries.\n",
         "\n",
-        "Convolutional Neural Networks (CNNs) are neural networks with architectural constraints to reduce computational complexity and ensure translational invariance (the network interprets input patterns the same regardless of translation— in terms of image recognition: a banana is a banana regardless of where it is in the image). Convolutional Neural Networks have three important architectural features.4\n",
+        "Convolutional Neural Networks (CNNs) are neural networks with architectural constraints to reduce computational complexity and ensure translational invariance (the network interprets input patterns the same regardless of translation— in terms of image recognition: a banana is a banana regardless of where it is in the image). \n",
         "\n",
-        "\n",
-        "https://ai.stackexchange.com/a/5566/49733\n",
-        "\n",
-        "Convolutional Neural Networks have three important architectural features.\n",
+        "#### Convolutional Neural Networks have three important architectural features.\n",
         "\n",
         "**Local Connectivity**: Neurons in one layer are only connected to neurons in the next layer that are spatially close to them. This design trims the vast majority of connections between consecutive layers, but keeps the ones that carry the most useful information. The assumption made here is that the input data has spatial significance, or in the example of computer vision, the relationship between two distant pixels is probably less significant than two close neighbors.\n",
         "\n",
