adding YT Links to NoteBook

--- a/Kaggle_Competition/Santander-Kg-Value-Prediction-Challenge/NoteBooks/Santender_v3.ipynb
+++ b/Kaggle_Competition/Santander-Kg-Value-Prediction-Challenge/NoteBooks/Santender_v3.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://bit.ly/2Z2PUXl\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my Detailed YouTube Video Explaining the whole Notebook</b></h1></a>\n",
+    "\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/U4WssYM.png)](https://www.youtube.com/watch?v=QI0qjDfMtAw&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&ab_channel=RohanPaul \"Predict Transaction Value of a Bank's Potential Customers - Kaggle Santander Value Prediction Competition\")"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2310,10 +2320,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   "hash": "f9f85f796d01129d0dd105a088854619f454435301f6ffec2fea96ecbd9be4ac"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.7 64-bit",
    "name": "python3"
   },
   "language_info": {
