adding YT Links to NoteBook

--- a/Kaggle_Competition/Santander-Kg-Value-Prediction-Challenge/NoteBooks/Santender_v3.ipynb
+++ b/Kaggle_Competition/Santander-Kg-Value-Prediction-Challenge/NoteBooks/Santender_v3.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## LightGBM, XGBoost and CatBoost - Tutorial Notebook / Competition Kernel (also my Medium Blog post)\n",
+    "\n",
     "<a href=\"https://bit.ly/2Z2PUXl\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my Detailed YouTube Video Explaining the whole Notebook</b></h1></a>\n",
     "\n",
     "\n",
-    "[![IMAGE ALT TEXT](https://imgur.com/U4WssYM.png)](https://www.youtube.com/watch?v=QI0qjDfMtAw&list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y&ab_channel=RohanPaul \"Predict Transaction Value of a Bank's Potential Customers - Kaggle Santander Value Prediction Competition\")"
+    "[![IMAGE ALT TEXT](https://imgur.com/U4WssYM.png)](https://bit.ly/2Z2PUXl \"Predict Transaction Value of a Bank's Potential Customers - Kaggle Santander Value Prediction Competition\")"
    ]
   },
   {
