updating description of Historic Crypto NB

--- a/Stock_Market_with_Python/Historic_Crypto.ipynb
+++ b/Stock_Market_with_Python/Historic_Crypto.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code to fetch Bitcoin Historic Prices from Oct-2015 to Oct-2021 using [Historic Crypto](https://pypi.org/project/Historic-Crypto/) package\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
