updating YT Link for Bitcoing prediction with LSTM

--- a/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
+++ b/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>𝗕𝗶𝘁𝗰𝗼𝗶𝗻 𝗣𝗿𝗶𝗰𝗲 𝗣𝗿𝗲𝗱𝗶𝗰𝘁𝗶𝗼𝗻 𝘄𝗶𝘁𝗵 𝗟𝗦𝗧𝗠 - Detailed Video in my YouTube Channel</b><a id=\"0\"></a></h1>\n",
+    "\n",
+    "<a href=\"https://bit.ly/3mXnKGH\"><h1 style=\"font-size:250%; font-family:cursive; color:#ff6666;\"><b>Link to my YouTube Video</b></h1></a>\n",
+    "\n",
+    "[![IMAGE ALT TEXT](https://imgur.com/ZtAvye5.png)](https://bit.ly/3mXnKGH \"𝗕𝗶𝘁𝗰𝗼𝗶𝗻 𝗣𝗿𝗶𝗰𝗲 𝗣𝗿𝗲𝗱𝗶𝗰𝘁𝗶𝗼𝗻 𝘄𝗶𝘁𝗵 𝗗𝗲𝗲𝗽 𝗟𝗲𝗮𝗿𝗻𝗶𝗻𝗴 𝗟𝗦𝗧𝗠\")"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
