correction small spelling

--- a/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
+++ b/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
@@ -1114,7 +1114,7 @@
     "\n",
     "print(\"trainX: \", trainX.shape)\n",
     "print(\"trainY: \", trainY.shape)\n",
-    "print(\"testY: \", testX.shape)\n",
+    "print(\"testX: \", testX.shape)\n",
     "print(\"testY\", testY.shape)"
    ]
   },
