updating small comment

--- a/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
+++ b/Stock_Market_with_Python/Bitcoin_Price_Prediction_with_LSTM.ipynb
@@ -2768,9 +2768,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Now Future Price Predictions 5 Days beyond the actual trading days for which I dont have the ground truth actual Trading Price yet\n",
+    "# Now Future Price Predictions - For 5 Days beyond the actual trading days for which I dont have the ground truth data (i.e. for 5-days into future for which I dont have actual Trading Price yet)\n",
     "\n",
-    "That is the original Trading data ended on 30-Oct-2021, but now I am going to forecast beyond 30-Oct-2021\n",
+    "Note that the original Trading data (the .csv file used at the very top of this notebook) ended on 30-Oct-2021, but now I am going to forecast the Bitcoin Prices for 5 days beyond 30-Oct-2021, using the trained LSTM model above.\n",
     "\n",
     "First check the shape of testX"
    ]
